--- a/sshd.8
+++ b/sshd.8
@@ -147,7 +147,7 @@ is normally not run
 from inetd because it needs to generate the server key before it can
 respond to the client, and this may take tens of seconds.  Clients
 would have to wait too long if the key was regenerated every time.
-However, with small key sizes (e.g.  512) using
+However, with small key sizes (e.g., 512) using
 .Nm
 from inetd may
 be feasible.
