--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20000408
+ - Avoid some compiler warnings in fake-get*.c
+ - Add IPTOS macros for systems which lack them
+
 20000406
  - OpenBSD CVS update:
    - [channels.c]
