--- a/INSTALL
+++ b/INSTALL
@@ -9,6 +9,9 @@ http://www.cdrom.com/pub/infozip/zlib/
 OpenSSL:
 http://www.openssl.org/
 
+RPMs of OpenSSL are available in the support/ directory of the OpenSSH 
+mirror site. OpenSSH requires OpenSSL version 0.9.5 or later.
+
 OpenSSH can utilise Pluggable Authentication Modules (PAM) if your system
 supports it. PAM is standard on Redhat and Debian Linux and on Solaris.
 
