--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20000420
+ - Make fixpaths work with perl4, patch from Andre Lucas 
+   <andre.lucas@dial.pipex.com>
+
 20000419
  - OpenBSD CVS updates
    [channels.c]
