- Debian bug #55910 - remove references to ssl(8) manpages

--- a/ssh-agent.1
+++ b/ssh-agent.1
@@ -144,8 +144,7 @@ newer versions bore successively more restrictive licenses.
 This version of OpenSSH
 .Bl -bullet
 .It
-has all components of a restrictive nature (i.e., patents, see
-.Xr ssl 8 )
+has all components of a restrictive nature (i.e., patents)
 directly removed from the source code; any licensed or patented components
 are chosen from
 external libraries.
@@ -160,12 +159,8 @@ supports one-time password authentication with
 .Xr skey 1 .
 .El
 .Pp
-The libraries described in
-.Xr ssl 8
-are required for proper operation.
 .Sh SEE ALSO
 .Xr ssh 1 ,
 .Xr ssh-add 1 ,
 .Xr ssh-keygen 1 ,
 .Xr sshd 8 ,
-.Xr ssl 8
