--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,7 @@
   - Allow setting of PAM service name through CFLAGS (SSHD_PAM_SERVICE)
   - Use vhangup to clean up Linux ttys
   - Force posix getopt processing on GNU libc systems
+ - Debian bug #55910 - remove references to ssl(8) manpages
 
 20000419
  - OpenBSD CVS updates
