--- a/ssh.1
+++ b/ssh.1
@@ -1089,8 +1089,7 @@ more restrictive licenses, and thus demand for a free version was born.
 This version of OpenSSH
 .Bl -bullet
 .It
-has all components of a restrictive nature (i.e., patents, see
-.Xr ssl 8 )
+has all components of a restrictive nature (i.e., patents)
 directly removed from the source code; any licensed or patented components
 are chosen from
 external libraries.
@@ -1106,10 +1105,6 @@ supports one-time password authentication with
 .Xr skey 1 .
 .El
 .Pp
-The libraries described in
-.Xr ssl 8
-are required for proper operation.
-.Pp
 OpenSSH has been created by Aaron Campbell, Bob Beck, Markus Friedl,
 Niels Provos, Theo de Raadt, and Dug Song.
 .Sh SEE ALSO
@@ -1121,4 +1116,3 @@ Niels Provos, Theo de Raadt, and Dug Song.
 .Xr ssh-keygen 1 ,
 .Xr telnet 1 ,
 .Xr sshd 8 ,
-.Xr ssl 8
