--- a/sshd.8
+++ b/sshd.8
@@ -872,8 +872,7 @@ more restrictive licenses, and thus demand for a free version was born.
 This version of OpenSSH
 .Bl -bullet
 .It
-has all components of a restrictive nature (i.e., patents, see
-.Xr ssl 8 )
+has all components of a restrictive nature (i.e., patents)
 directly removed from the source code; any licensed or patented components
 are chosen from
 external libraries.
@@ -888,16 +887,11 @@ authentication and ticket passing.
 supports one-time password authentication with
 .Xr skey 1 .
 .El
-.Pp
-The libraries described in
-.Xr ssl 8
-are required for proper operation.
 .Sh SEE ALSO
 .Xr scp 1 ,
 .Xr ssh 1 ,
 .Xr ssh-add 1 ,
 .Xr ssh-agent 1 ,
 .Xr ssh-keygen 1 ,
-.Xr ssl 8 ,
 .Xr rlogin 1 ,
 .Xr rsh 1
