--- a/ssh-keygen.1
+++ b/ssh-keygen.1
@@ -37,6 +37,8 @@
 .Nm ssh-keygen
 .Fl l
 .Op Fl f Ar keyfile
+.Nm ssh-keygen
+.Fl R
 .Sh DESCRIPTION
 .Nm
 generates and manages authentication keys for
@@ -112,6 +114,10 @@ Provides the new comment.
 Provides the new passphrase.
 .It Fl P Ar passphrase
 Provides the (old) passphrase.
+.It Fl R
+If RSA support is functional, immediately exits with code 0.  If RSA
+support is not functional, exits with code 1.  This flag will be
+removed once the RSA patent expires.
 .El
 .Sh FILES
 .Bl -tag -width Ds
