--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20000430
+ - Merge HP-UX fixes and TCB support from Ged Lodder <lodder@yacc.com.au>
+ -
+
 20000429
  - Merge big update to OpenSSH-2.0 from OpenBSD CVS
    [README.openssh2]
