--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
    - send debug messages in SSH2 format
  - Include missing headers for OpenSSL tests. Fix from Phil Karn 
    <karn@ka9q.ampr.org>
+ - Fixed __progname symbol collisions reported by Andre Lucas 
+   <andre.lucas@dial.pipex.com>
 
 20000430
  - Merge HP-UX fixes and TCB support from Ged Lodder <lodder@yacc.com.au>
