- Add some missing ifdefs to auth2.c

--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,7 @@
    <andre.lucas@dial.pipex.com>
  - Merged bsd-login ttyslot and AIX utmp patch from Gert Doering
    <gd@hilb1.medat.de>
+ - Add some missing ifdefs to auth2.c
 
 20000430
  - Merge HP-UX fixes and TCB support from Ged Lodder <lodder@yacc.com.au>
