--- a/ChangeLog
+++ b/ChangeLog
@@ -20,6 +20,8 @@
    <gd@hilb1.medat.de>
  - Add some missing ifdefs to auth2.c
  - Deprecate perl-tk askpass.
+ - Irix portability fixes - don't include netinet headers more than once
+ - Make sure we don't save PRNG seed more than once
 
 20000430
  - Merge HP-UX fixes and TCB support from Ged Lodder <lodder@yacc.com.au>
