--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,8 @@
    - unlink pid file, ok niels@
    [auth2.c]
    - Add missing #ifdefs; ok - markus
+ - Add Andre Lucas' <andre.lucas@dial.pipex.com> patch to read entropy 
+   gathering commands from a text file
  - Release 2.0.0beta1
 
 20000501
