--- a/ssh-keygen.1
+++ b/ssh-keygen.1
@@ -142,13 +142,13 @@ support is not functional, exits with code 1.  This flag will be
 removed once the RSA patent expires.
 .It Fl x
 This option will read a private
-OpenSSH DSA format file and prints to stdout a SSH2-compatible public key.
+OpenSSH DSA format file and print a SSH2-compatible public key to stdout.
 .It Fl X
 This option will read a
-SSH2-compatible public key file and print to stdout an OpenSSH DSA compatible public key.
+SSH2-compatible public key file and print an OpenSSH DSA compatible public key to stdout.
 .It Fl y
 This option will read a private
-OpenSSH DSA format file and prints to stdout an OpenSSH DSA public key.
+OpenSSH DSA format file and print an OpenSSH DSA public key to stdout.
 .El
 .Sh FILES
 .Bl -tag -width Ds
